<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/main_login_headline"
        android:textColor="@color/colorTextPrimary"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/login_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/main_login_sub"
        android:textSize="15sp"
        android:textColor="@color/colorTextSecondary"
        android:layout_below="@id/login_headline"/>

    <TextView
        android:id="@+id/username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/username_entry"
        android:text="@string/main_login_username"
        android:layout_below="@id/login_sub" />

    <EditText
        android:id="@+id/username_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/username_label" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/password_entry"
        android:text="@string/main_login_password"
        android:layout_below="@id/username_entry" />

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/password_label" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_entry"
        android:onClick="onBtnTap"
        android:text="@string/main_login_btn" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_progressbar"
        android:layout_below="@id/login_btn"
        android:indeterminate="true"
        android:visibility="invisible"/>

</RelativeLayout>
